# freezable-mixin

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-app.yml
docs/: changelog.md  index.md  reference.md  requirements.txt  roadmap.md  user-guide.md
freezable/: __init__.py  freezable.py
freezable_mixin/: freezable.py
tests/: test_docs_and_readme.py  test_freezable.py  test_freezable_mixin.py
