[tool.poetry]
name = "freezable"
version = "0.1.0"
description = "Freezable mixin class"
authors = ["Ederic Oytas <edericoytas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
